<resources>
    <string name="app_name">FaceSwap</string>
    <string name="face_1">Face 1</string>
    <string name="face_2">Face 2</string>
    <string name="image1_for_faces">Image1 for faces</string>
    <string name="action_button">Action button.</string>
    <string name="image2_for_faces">Image2 for faces</string>
    <string name="swap">Swap</string>
    <string name="undo">undo</string>
    <string name="select_image1">Select Image1</string>
    <string name="select_image2">Select Image2</string>
    <string name="uwImage">uwImg</string>
    <string name="blur">Blur</string>
</resources>